<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp" >

        <include
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/header" />

        <LinearLayout
            android:id="@+id/headerbuttonframe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn1"
                style="@style/TextMenuTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_left"
                android:text="@string/tab1"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn2"
                style="@style/TextMenuTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_center"
                android:text="@string/tab2"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn3"
                style="@style/TextMenuTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_right"
                android:text="@string/tab3"
                android:textSize="15dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/headerLayout_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent" >

            <LinearLayout
                android:id="@+id/streamingLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tvsocietyLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:visibility="gone" >

                <include
                    android:id="@+id/headerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/header_catagory"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hclusiveLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:visibility="gone" >

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <ImageView android:id="@+id/imgRelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/refresh_icon"
        android:layout_centerInParent="true"
        android:visibility="gone"  />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>